--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/kalviumcommunity/S84_AnnoyingWi-Fi.git"
   },
-  "author": "",
+  "author": "Harshit",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/kalviumcommunity/S84_AnnoyingWi-Fi/issues"
