--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongodb": "^6.13.1"
+    "mongodb": "^6.13.1",
+    "mongoose": "^8.10.1"
   }
 }
