--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "Welcome to the **Most Annoying Wi-Fi Names** project! Ever seen hilarious Wi-Fi names like `It Hurts When IP` or `Pretty Fly for a Wi-Fi`? This project lets you track and share them! 🚀",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"No tests implemented yet\""
+    "test": "echo \"No tests implemented yet\"",
+    "server": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,10 @@
   "homepage": "https://github.com/kalviumcommunity/S84_AnnoyingWi-Fi#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "mongodb": "^6.13.1",
-    "mongoose": "^8.10.1"
+    "mongoose": "^8.10.1",
+    "nodemon": "^3.1.10"
   }
 }
